# go2-w-project

./: README.md  main.py  requirements.txt
follow/: follower.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
navigation/: navigation.py
object_detection/: detector.py
utils/: CMakeLists.txt  go2w_control.cpp  robot_interface.py  socket_server.py
voice_control/: voice_controller.py
